[gd_scene load_steps=4 format=1]

[ext_resource path="res://Game/Weapons/bullet_1.gd" type="Script" id=1]
[ext_resource path="res://Game/tutorial/bullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="Bullet" type="Area2D"]

transform/scale = Vector2( 1.2, 1.2 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0.269805, -0.654173 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 8
collision/mask = 7
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}
Speed = 6000

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.269805, -0.654173 )
transform/scale = Vector2( 3, 3 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_enter" from="." to="." method="_on_Bullet_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_Bullet_body_enter"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


